# crewai_sales_campaign_custom_tools

./: README.md  pyproject.toml  report.md
src/crewai_sales_campaign_custom_tools/: crew.py  main.py
src/crewai_sales_campaign_custom_tools/config/: agents.yaml  tasks.yaml
src/crewai_sales_campaign_custom_tools/instructions/: Customer Engagement Guide for Small Businesses.md  Personalized Outreach Instructions for Tech Startups.md
src/crewai_sales_campaign_custom_tools/tools/: custom_tool.py
